# webapp-template

./: .gitignore  .pre-commit-config.yaml  .templateignore  Makefile  compose.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
app/application/: dtos.py
app/application/services/: address.py  post.py  user.py
app/core/: config.py  exceptions.py
app/domain/: repository.py
app/domain/models/: address.py  base.py  common.py  post.py  user.py
app/infrastructure/: exceptions.py  models.py  utils.py
app/infrastructure/repositories/: address.py  base.py  mixin.py  post.py  user.py
tests/: .env.test  conftest.py  test_temp.py
tests/application/services/: test_address.py  test_post.py  test_user.py
tests/fixtures/: database.py  repositories.py  services.py
tests/fixtures/factories/: factories.py  fixtures.py
tests/infrastructure/: test_models.py  test_unit.py
tests/infrastructure/repositories/: test_address.py  test_post.py  test_user.py
