[project]
name = "project"
version = "0.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.9",
    "faker>=33.1.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]
ignore = [
    "PLR0913"  # Too many arguments in function definition (6 > 5)
]

[tool.mypy]
strict = true

[tool.pyright]
strict = ["app"]

[tool.pytest.ini_options]
addopts = "--log-disable=faker.factory"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
