[project]
name = "project"
version = "0.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.10",
    "docker>=7.1.0",
    "faker>=35.0.0",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]
ignore = [
    "PLR0913"  # Too many arguments in function definition (6 > 5)
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["docker.*"]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--log-disable=faker.factory"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
