[project]
name = "project"
version = "0.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.12",
    "docker>=7.1.0",
    "faker>=36.1.1",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]
ignore = [
    "PLR0913"  # Too many arguments in function definition (6 > 5)
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--log-disable=faker.factory"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
